# hennessy

./: .clang-format  CMakeLists.txt  readme.md
engine/: CMakeLists.txt
engine/src/: defines.h  entry.h  game_types.h
engine/src/container/: darray.cc  darray.h
engine/src/core/: application.cc  application.h  event.cc  event.h  input.cc  input.h  log.cc  log.h  memory.cc  memory.h
engine/src/platform/: platform.h  platform_macos.mm
test/: CMakeLists.txt
test/src/: entry.cc  game.cc  game.h  main.cc
